# care

./: Cargo.toml  license.md  out.txt  readme.md  shell.nix
care-macro/: Cargo.toml
care-macro/src/: lib.rs
care-multiplayer/: Cargo.toml
care-multiplayer/src/: lib.rs  server.rs  sync.rs
examples/: async.rs  async_manual.rs  boxes.rs  character.rs  circles.rs  egui.rs  hello.rs  lines-big.rs  lines.rs  state.rs  state_struct.rs  texture.rs
src/: compute.rs  config.rs  event.rs  graphics.rs  gui.rs  keyboard.rs  lib.rs  math.rs  mouse.rs  prelude.rs  shader_2d.wgsl  window.rs
src/event/: custom_async.rs  polling.rs  tokio_event.rs
src/graphics/: api.rs  font.rs  graphics_state.rs  render_2d.rs  shader_2d.wgsl  texture.rs
