[package]
name = "care"
version = "0.1.0"
edition = "2021"

[dependencies]
care-macro = { path = "care-macro" }

bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.24", optional = true }
nalgebra = "0.32"
parking_lot = "0.12"
pollster = { version = "0.3", optional = true }
rand = "0.8"
rusttype = { version = "0.9", features = ["gpu_cache"], optional = true }
# Winit updated raw_window_handle to 0.6 but wgpu is still on 0.5, so this is default features with rwh_06 replaced with _05
winit = { version = "0.29", default_features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"], optional = true }
wgpu = { version = "0.18", optional = true }

tokio = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
default = ["graphics", "window", "async-custom"]
# Use 64 bit floats instead of 32 bit floats everywhere
f64 = []

graphics = ["dep:wgpu", "dep:image", "dep:rusttype", "dep:pollster"]
window = ["dep:winit", "graphics"]

async-custom = []
async-tokio = ["dep:tokio", "tokio/rt-multi-thread", "_async-tokio-internal"]
async-tokio-single-thread = ["dep:tokio", "tokio/rt", "_async-tokio-internal"]

_async-tokio-internal = []

[workspace]
members = [
	"care-macro",
	"care-multiplayer"
]

