[package]
name = "care"
version = "0.0.1"
edition = "2021"

[dependencies]
care-macro = { path = "care-macro" }

bytemuck = { version = "1", features = ["derive"] }
half = { version = "2", features = ["bytemuck"] }
image = { version = "0.25", optional = true }
nalgebra = "0.32"
parking_lot = "0.12"
pollster = { version = "0.3", optional = true }
rand = "0.8"
rusttype = { version = "0.9", features = ["gpu_cache"], optional = true }
winit = { version = "0.30", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"], optional = true }
wgpu = { version = "23", optional = true }
wrgpgpu = { git = "https://gitlab.101100.ca/veda/wrgpgpu", optional = true }

tokio = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
default = ["graphics", "window", "compute", "async-tokio"]
# Use 64 bit floats instead of 32 bit floats everywhere
f64 = []

graphics = ["dep:wgpu", "dep:image", "dep:rusttype", "dep:pollster"]
window = ["dep:winit", "graphics"]
compute = ["dep:wrgpgpu"]

async-custom = []
async-tokio = ["dep:tokio", "tokio/rt-multi-thread", "_async-tokio-internal"]
async-tokio-single-thread = ["dep:tokio", "tokio/rt", "_async-tokio-internal"]

_async-tokio-internal = []

[workspace]
members = [
	"care-macro",
	"care-multiplayer"
]

